--- a/app/src/main/res/layout/item_artist_main_activity.xml
+++ b/app/src/main/res/layout/item_artist_main_activity.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/main_artist_photo"
+            android:id="@+id/main_artist_small_cover"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"/>
