--- a/app/src/main/res/layout/item_artist_main_activity.xml
+++ b/app/src/main/res/layout/item_artist_main_activity.xml
@@ -26,19 +26,16 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/main_artist_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                style="@style/NameTextView"
+                android:id="@+id/main_artist_name" />
 
             <TextView
-                android:id="@+id/main_artist_genres"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                style="@style/DefaultTextView"
+                android:id="@+id/main_artist_genres" />
 
             <TextView
-                android:id="@+id/main_artist_statistics"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                style="@style/DefaultTextView"
+                android:id="@+id/main_artist_statistics" />
 
         </LinearLayout>
 
