--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="toolbarColor">#FFFFFF</color>
     <color name="nameColor">#000000</color>
+    <color name="biographyColor">#000000</color>
 </resources>
