--- a/app/src/main/res/layout/item_artist_main_activity.xml
+++ b/app/src/main/res/layout/item_artist_main_activity.xml
@@ -10,34 +10,40 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:orientation="horizontal">
+        android:layout_margin="10dp"
+        android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/main_artist_small_cover"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"/>
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="8dp"
+            android:layout_weight="2"
+            />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_weight="3"
+            >
 
             <TextView
                 style="@style/NameTextView"
-                android:id="@+id/main_artist_name" />
+                android:id="@+id/main_artist_name"
+                android:layout_alignParentTop="true"/>
 
             <TextView
                 style="@style/DefaultTextView"
-                android:id="@+id/main_artist_genres" />
+                android:id="@+id/main_artist_genres"
+                android:layout_below="@id/main_artist_name"/>
 
             <TextView
                 style="@style/DefaultTextView"
-                android:id="@+id/main_artist_statistics" />
+                android:id="@+id/main_artist_statistics"
+                android:layout_below="@id/main_artist_genres"
+                android:layout_alignParentBottom="true"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
